[Modern Media Controls] [visionOS] The overflow button is not glowing https://bugs.webkit.org/show_bug.cgi?id=276497 <rdar://126575229>
Reviewed by Aditya Keerthi.

Give the overflow button its own compositing layer to avoid a
hit-testing issue with Backdrop Layers.

* Source/WebCore/Modules/modern-media-controls/controls/vision-media-controls.css:
(.media-controls.vision .controls-bar.simple-layout.top-right > .overflow):

Mark the button as `will-change: opacity` to give it its own layer.
Canonical link: https://commits.webkit.org/280897@main

--- a/Source/WebCore/Modules/modern-media-controls/controls/vision-media-controls.css
+++ b/Source/WebCore/Modules/modern-media-controls/controls/vision-media-controls.css
@@ -134,6 +134,8 @@
 
 .media-controls.vision .controls-bar.simple-layout.top-right > .overflow {
     margin: 0 0 0 5px;
+    /* Needs compositing layer for InteractionRegion hit-testing. */
+    will-change: opacity;
 }
 
 .media-controls.vision .volume-container {
